--- a/index.html
+++ b/index.html
@@ -13,7 +13,10 @@
     </div>
     <header>
       <a href="#" class="brand">PORTFOLIO</a>
-      <div class="menu-btn"></div>
+      <div class="menu-btn">
+        <i class="fas fa-bars"></i>
+        <i class="fas fa-times"></i>
+      </div>
       <div class="navigation">
         <a href="#main">Home</a>
         <a href="#about">About</a>
